--- a/web2/src/app/globals.css
+++ b/web2/src/app/globals.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 h1 {
-    @apply text-xl;
+  @apply text-xl;
+}
+
+input[type="text"] {
+  @apply bg-gray-100 appearance-none border-2 border-gray-200 rounded py-1 px-2 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500;
 }
