--- a/web/src/app/components/data-table.css
+++ b/web/src/app/components/data-table.css
@@ -1,4 +1,4 @@
-table {
+/* table {
   border: 2px solid #cecece;
   border-radius: 4px;
 }
@@ -15,4 +15,4 @@ td:nth-child(2) {
   min-width: 120px;
   text-align: right;
   font-weight: 500;
-}
+} */
